# pyIOTA

./: .gitignore  README.md  __init__.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
acnet/: __init__.py  frontends.py  sequences.py  test_frontends.py  utils.py
elegant/: __init__.py  io.py  latticefile.py  routines.py  taskfile.py  utils.py
examples/: IOTA_1NL_100MeV_v8.6.1.4.6ds  chromaticity.py  create_lattice.ipynb  read_bpms.ipynb  read_devices.py
gui/: plots.py
iota/: __init__.py  magnets.py  run2.py  util.py
lattice/: __init__.py  chromaticity.py  containers.py  elements.py  floor_coordinates.py  lattice.py  optics.py  tools.py  tracking.py
madx/: io.py
math/: __init__.py  angles.py  constants.py  geometry.py
ocelot_extras/: __init__.py  chromaticity.py  elements.py  optics.py  tracking.py
pyiota/: __init__.py
pyiota/acnet/: __init__.py  adapters.py  backend.py  data.py  devices.py  errors.py  frontends.py  sequences.py  test_frontends.py  utils.py
pyiota/elegant/: __init__.py  io.py  latticefile.py  latticeio.py  routines.py  taskfile.py  utils.py
pyiota/examples/: read_bpms.ipynb  read_devices.py
pyiota/gui/: jupyter.py  plots.py
pyiota/iota/: __init__.py  magnets.py  magnets_run4.py  run2.py  run4.py  (+2 more)
scripts/: acnet_examples.ipynb  benchmark.ipynb  constants.ipynb
sim/: __init__.py  io.py  parameters.py  runtime.py
sixdsim/: io.py
tbt/: __init__.py  constants.py  naff.py  optics.py  tbt.py  tune_utils.py
tests/: test_acnet.py  test_knobs.py  test_lattice.py  test_madx.py
util/: __init__.py  config.py  util.py
(+52 files in other folders)
