# Editable pip installs are borked...fall back to setup.py...yay...
#[build-system]
#requires = ["setuptools"]
#requires = ["flit_core >=2,<4"]
#build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "pyiota"
author = "Nikita Kuklev"
home-page = "https://github.com/nikitakuklev/pyIOTA"
classifiers = [ "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",]
description-file = "README.md"

